src/snapshots/cargo_vet__tests__simple-policy-first-policy-redundant.snap
---
source: src/tests.rs
assertion_line: 1689
expression: stdout
---
Vetting Succeeded (5 fully audited, 0 partially audited, 0 unaudited)

