src/snapshots/cargo_vet__tests__simple-policy-first-too-strong.snap
---
source: src/tests.rs
assertion_line: 1483
expression: stdout
---
Vetting Failed!

2 unvetted dependencies:
  third-party1:10.0.0 missing ["strong-reviewed"]
  third-party2:10.0.0 missing ["strong-reviewed"]

dependency tree:
  root-package:10.0.0
    first-party:10.0.0
      third-party1:10.0.0 needs ["strong-reviewed"]
      third-party2:10.0.0 needs ["strong-reviewed"]
Use |cargo vet certify| to record the audits.
recommended audits:
    third-party1:10.0.0 full 10.0.0 (+100) for ["strong-reviewed"]
    third-party2:10.0.0 full 10.0.0 (+100) for ["strong-reviewed"]


