src/snapshots/cargo_vet__tests__simple-policy-first-weaker.snap
---
source: src/tests.rs
assertion_line: 1671
expression: stdout
---
Vetting Succeeded (3 fully audited)

