src/snapshots/cargo_vet__tests__simple-policy-root-dep-too-strong.snap
---
source: src/tests.rs
assertion_line: 1536
expression: stdout
---
Vetting Failed!

2 unvetted dependencies:
  third-party1:10.0.0 missing ["strong-reviewed"]
  third-party2:10.0.0 missing ["strong-reviewed"]

recommended audits:
    third-party1:10.0.0 for strong-reviewed (100 lines) (used by first-party) 
    third-party2:10.0.0 for strong-reviewed (100 lines) (used by first-party) 

Use |cargo vet certify| to record the audits.

