src/snapshots/cargo_vet__tests__simple-policy-root-dep-weaker.snap
---
source: src/tests.rs
assertion_line: 1689
expression: stdout
---
Vetting Succeeded (3 fully audited)

