src/snapshots/cargo_vet__tests__simple-policy-root-weaker.snap
---
source: src/tests.rs
assertion_line: 1466
expression: stdout
---
Vetting Succeeded (5 fully audited, 0 partially audited, 0 unaudited)

